--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 <body>
   <!-- Page 1 (Intro) -->
   <section id="page-1" class="page">
-    <h1>Welcome To DevBooks</h1>
+    <h1>Welcome To DevStories</h1>
     <p>Create stories and decide whether to show them to the world or not.</p>
     <div>
       <a href="#page-2" class="btn">
         Next Page <i class="fas fa-arrow-circle-down"></i>
       </a>
+      <a target="_blank" href="https://quiet-sea-07813.herokuapp.com/" class="btn red">Visit DevStories</a>
     </div>
   </section>
 
